[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/ui.gd" type="Script" id=1]

[node name="UI" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="bg" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 115.0
margin/bottom = 37.0

[node name="Examine" type="Button" parent="bg"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 8.0
margin/right = 37.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "E"
flat = false

[node name="Use" type="Button" parent="bg"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 8.0
margin/right = 72.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "U"
flat = false

[node name="Talk" type="Button" parent="bg"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 79.0
margin/top = 8.0
margin/right = 107.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "T"
flat = false

[connection signal="pressed" from="bg/Examine" to="." method="_on_Examine_pressed"]

[connection signal="pressed" from="bg/Use" to="." method="_on_Use_pressed"]

[connection signal="pressed" from="bg/Talk" to="." method="_on_Talk_pressed"]


